<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>hi.hydra</groupId>
	<artifactId>hydraautomation</artifactId>
	<version>0.0.1-SNAPSHOT</version>

	<name>hydraautomation</name>
	<!-- FIXME change it to the project's website -->
	<url>http://www.example.com</url>

	<description>Demo project for Spring Boot</description>
	<properties>
		<java.version>11</java.version>
		<webdrivermanager.version>5.2.2</webdrivermanager.version>
		<selenium-java.version>4.1.3</selenium-java.version>
		<cucumber-testng.version>7.2.3</cucumber-testng.version>
		<cucumber-java.version>7.2.3</cucumber-java.version>
		<testng.version>7.4.0</testng.version>
		<rest-assured.version>5.1.1</rest-assured.version>
		<json-schema-validator.version>4.3.1</json-schema-validator.version>
		<axe-selenium.version>3.0</axe-selenium.version>
	</properties>

	<dependencies>

		<dependency>
			<groupId>io.github.bonigarcia</groupId>
			<artifactId>webdrivermanager</artifactId>
			<version>${webdrivermanager.version}</version>
		</dependency>

		<dependency>
			<groupId>org.seleniumhq.selenium</groupId>
			<artifactId>selenium-java</artifactId>
			<version>${selenium-java.version}</version> <!--$NO-MVN-MAN-VER$ -->
		</dependency>

		<dependency>
			<groupId>io.cucumber</groupId>
			<artifactId>cucumber-testng</artifactId>
			<version>${cucumber-testng.version}</version>
		</dependency>

		<dependency>
			<groupId>io.cucumber</groupId>
			<artifactId>cucumber-java</artifactId>
			<version>${cucumber-java.version}</version>
		</dependency>

		<dependency>
			<groupId>org.testng</groupId>
			<artifactId>testng</artifactId>
			<version>${testng.version}</version>
			<scope>test</scope>
		</dependency>

		<dependency>
			<!-- For avoiding groovy compatibility issue with rest assured -->
			<groupId>org.apache.groovy</groupId>
			<artifactId>groovy</artifactId>
			<version>4.0.1</version> <!-- Not added in properties due to and issue "LSP4E linked editing has encountered 
				a problem -->
		</dependency>

		<dependency>
			<groupId>io.rest-assured</groupId>
			<artifactId>rest-assured</artifactId>
			<version>${rest-assured.version}</version> <!--$NO-MVN-MAN-VER$ -->
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>io.rest-assured</groupId>
			<artifactId>json-schema-validator</artifactId>
			<version>${json-schema-validator.version}</version> <!--$NO-MVN-MAN-VER$ -->
		</dependency>

		<dependency>
			<groupId>com.deque</groupId>
			<artifactId>axe-selenium</artifactId>
			<version>${axe-selenium.version}</version>
		</dependency>

		<dependency>
			<groupId>tech.grasshopper</groupId>
			<artifactId>extentreports-cucumber7-adapter</artifactId>
			<version>1.7.0</version>
		</dependency>

		<dependency>
			<groupId>com.aventstack</groupId>
			<artifactId>extentreports</artifactId>
			<version>5.0.9</version>
		</dependency>

		<dependency>
			<groupId>com.github.javafaker</groupId>
			<artifactId>javafaker</artifactId>
			<version>1.0.2</version>
		</dependency>

		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-lang3</artifactId>
			<version>3.12.0</version>
		</dependency>
		
		<dependency>
			<groupId>io.cucumber</groupId>
			<artifactId>cucumber-picocontainer</artifactId>
			<version>7.2.1</version>
		</dependency>
	</dependencies>

	<build>
		<plugins>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
			</plugin>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<configuration>
					<testFailureIgnore>true</testFailureIgnore>
					<suiteXmlFiles>
						<suiteXmlFile>testngAPI.xml</suiteXmlFile>
					</suiteXmlFiles>
					<argLine>-Dspring.profiles.active=remote</argLine>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-failsafe-plugin</artifactId>
				<version>2.22.0</version>
				<configuration>
					<argLine>
						--illegal-access=permit
					</argLine>
				</configuration>
				<executions>
					<execution>
						<goals>
							<goal>integration-test</goal>
							<goal>verify</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>net.masterthought</groupId>
				<artifactId>maven-cucumber-reporting</artifactId>
				<version>5.6.0</version>
				<executions>
					<execution>
						<id>execution</id>
						<phase>verify</phase>
						<goals>
							<goal>generate</goal>
						</goals>
						<configuration>
							<projectName>nop Demo Automation</projectName>
							<skip>false</skip>
							<outputDirectory>${project.build.directory}</outputDirectory>
							<inputDirectory>${project.build.directory}</inputDirectory>
							<jsonFiles>
								<param>**/*UI_cucumber.json</param>
								<param>**/*API_cucumber.json</param>
								<param>**/*Accessibility_cucumber.json</param>
							</jsonFiles>
							<mergeFeaturesById>true</mergeFeaturesById>
							<mergeFeaturesWithRetest>false</mergeFeaturesWithRetest>
							<checkBuildResult>false</checkBuildResult>
						</configuration>
					</execution>
				</executions>
			</plugin>

		</plugins>
	</build>

</project>